# Fingerprint-porter

./: .gitignore  README.md  door_switch.py  f_reader_commands.cpp  f_reader_commands.h  main.cpp  porter.db  sqlite3.h
client/src/: Porter.java  SentenceGenerator.java
client/src/cz/door/porter/client/: LedGpioController.java  TestPipeRead.java
client/test/: PorterTest.java
node/: delete.js  porter.db  server.js  testdb.js
reader/: CMakeLists.txt  README.md  f_reader_commands.cpp  f_reader_commands.h  gpl.txt  main.cpp
reader/rpi/: CMakeLists.txt
readerKotlin/: .gitignore  build.gradle
readerKotlin/src/main/java/: JustASimpleClass.java  TwoWaySerialComm.java  TwoWaySerialCommunication.java
readerKotlin/src/main/kotlin/cz/bublik/fingerprint/reader/: Main.kt
readerKotlin/src/main/kotlin/cz/bublik/fingerprint/reader/serial/: SerialCommunication.kt  TwoWaySerialCommunicationKotlin.kt
